--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,15 +45,15 @@ book:
 
     - part: "**1부** 들어가며"
       chapters:
-        - intro.qmd
-        - intro_whole_game.qmd
-        - intro_penguins.qmd
+        - intro.qmd                    # OK
+        - intro_whole_game.qmd         # OK
+        - intro_penguins.qmd           # OK
 
     - part: "**2부** 데이터 다루기"
       chapters:
-        - data_structure.qmd
-        - dataframe.qmd
-        - data_dplyr.qmd
+        - data_structure.qmd          # OK
+        - dataframe.qmd               # OK
+        - data_dplyr.qmd              # OK
         - data_tidyr.qmd
 
     - part: "**3부** 시각화"
